# DigitalisKiallitasDemo

./: CMakeLists.txt  README.md  main.cpp  message_lib.h  test_main.cpp
.github/workflows/: classroom.yml
